# python-hdrive17-eth

./: README.md  pyproject.toml  requirements.txt
examples/: basic_control.py  read_object.py  torque_mode.py  velocity_mode.py
hdrive/: __init__.py  motor.py  protocol.py  telemetry.py
hdrive_eth/: __init__.py  exceptions.py  motor.py
tests/: test_objects.py
